--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+   <title>Simple Search Form</title>
 </head>
 <body>
+
  
 
 	<nav class="navbar navbar-default">
@@ -17,6 +19,7 @@
 		    <%=link_to "Book Review" , root_path , class: "navbar-brand"%>
 		</div>
 		<ul class="nav navbar-nav">
+		
 
 			<li><%=link_to "Sign up" , new_user_registration_path %></li>
 
