--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+ 
  <h1 class="current-category"><%= params[:category] %></h1>
 <% if @books.count == 0 %>
 	<h1> There are no books currently in this category </h1>
@@ -7,9 +8,12 @@
 	<% @books.each do|book| %>
 	
 	<div class="col-md-3">
-	<h2><%= link_to book.title,book_path(book) %></h2>
+	<a href="/books/<%= book.id %>">
+	<%= image_tag book.image.url(:book_index) %>
+	</a>
     </div>
 	<% end %>
 	</div>
 <% end %>
+
 
