--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -4,7 +4,13 @@
 <html>
 <head>
 
-<%= csrf_meta_tags %>
+
+<%= javascript_include_tag "https://js.stripe.com/v1/", "application" %>
+<%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
+
+
+
+
 </head>
 <body>
   <%= yield %>
